[gd_scene load_steps=46 format=2]

[ext_resource path="res://src/Sprites/ChaserNPC1AllSprites.png" type="Texture" id=1]
[ext_resource path="res://src/Assets/Theme.tres" type="Theme" id=2]
[ext_resource path="res://src/Assets/DialogueStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://src/Scenes/NPCs/Chaser NPC/chaser_npc.gd" type="Script" id=4]
[ext_resource path="res://src/Scenes/NPCs/Chaser NPC/player_detection_zone.gd" type="Script" id=5]
[ext_resource path="res://src/Scenes/NPCs/Chaser NPC/chase_controller.gd" type="Script" id=6]
[ext_resource path="res://src/runtime_data.tres" type="Resource" id=7]

[sub_resource type="Animation" id=3]
resource_name = "BackIdle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=4]
resource_name = "BackRun"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59, 60, 61, 62, 63 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FightZonePivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "BackWalk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 88, 89, 90, 91, 92, 93, 94, 95 ]
}

[sub_resource type="Animation" id=6]
resource_name = "FrontIdle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=7]
resource_name = "FrontRun"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FightZonePivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "FrontWalk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 83, 84, 85, 86, 87 ]
}

[sub_resource type="Animation" id=9]
resource_name = "LeftIdle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "LeftRun"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FightZonePivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "LeftWalk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 67, 68, 69, 70, 71 ]
}

[sub_resource type="Animation" id=12]
resource_name = "RightIdle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 8 ]
}

[sub_resource type="Animation" id=13]
resource_name = "RightRun"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FightZonePivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "RightWalk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78, 79 ]
}

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "LeftIdle"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "RightIdle"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "FrontIdle"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "BackIdle"

[sub_resource type="AnimationNodeBlendSpace2D" id=21]
blend_point_0/node = SubResource( 17 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 18 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 19 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 20 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "LeftRun"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "RightRun"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "FrontRun"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "BackRun"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "LeftWalk"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "RightWalk"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "FrontWalk"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "BackWalk"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachine" id=1]
states/Idle/node = SubResource( 21 )
states/Idle/position = Vector2( 385, 84 )
states/Run/node = SubResource( 26 )
states/Run/position = Vector2( 576, 84 )
states/Walk/node = SubResource( 31 )
states/Walk/position = Vector2( 480, 164 )
transitions = [ "Idle", "Run", SubResource( 32 ), "Run", "Idle", SubResource( 33 ), "Idle", "Walk", SubResource( 34 ), "Walk", "Idle", SubResource( 35 ), "Walk", "Run", SubResource( 36 ), "Run", "Walk", SubResource( 37 ) ]
start_node = "Idle"
graph_offset = Vector2( 1, 32 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[sub_resource type="CapsuleShape2D" id=15]
radius = 1.15868
height = 7.5918

[sub_resource type="CircleShape2D" id=16]
radius = 40.3653

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 18.5147, 4.50735 )

[node name="ChaserNPC" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 4 )
_runtime_data = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -15.5 )
texture = ExtResource( 1 )
hframes = 96
frame = 40

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BackIdle = SubResource( 3 )
anims/BackRun = SubResource( 4 )
anims/BackWalk = SubResource( 5 )
anims/FrontIdle = SubResource( 6 )
anims/FrontRun = SubResource( 7 )
anims/FrontWalk = SubResource( 8 )
anims/LeftIdle = SubResource( 9 )
anims/LeftRun = SubResource( 10 )
anims/LeftWalk = SubResource( 11 )
anims/RightIdle = SubResource( 12 )
anims/RightRun = SubResource( 13 )
anims/RightWalk = SubResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 1 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 2 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0.183124, 0.0948277 )

[node name="Collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 15 )

[node name="NPCDialogueLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -47.0
margin_right = 15.0
margin_bottom = -35.0
grow_vertical = 0
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 16 )

[node name="ChaseController" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="ChaseController"]
one_shot = true
autostart = true

[node name="FightZonePivot" type="Position2D" parent="."]
rotation = 4.71239

[node name="FightZone" type="Area2D" parent="FightZonePivot"]
position = Vector2( 0, 14 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FightZonePivot/FightZone"]
shape = SubResource( 38 )
disabled = true
[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="ChaseController/Timer" to="ChaseController" method="_on_Timer_timeout"]
[connection signal="body_entered" from="FightZonePivot/FightZone" to="." method="_on_FightZone_body_entered"]
